# user-db

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
backend-dotnet/: .gitignore  Dockerfile
backend-dotnet/api/: Program.cs  api.csproj  appsettings.Development.json  appsettings.json
backend-dotnet/api-tests/: CustomWebApplicationFactory.cs  TestDbContext.cs  api-tests.csproj
backend-dotnet/api-tests/Endpoints/: UserEndpointsTests.cs
backend-dotnet/api-tests/Models/: PostgresDbContextTests.cs  UserTests.cs
backend-dotnet/api/Endpoints/: UserEndpoints.cs
backend-dotnet/api/Models/: DBContext.cs
backend-dotnet/api/Properties/: launchSettings.json
backend-fastapi/: Dockerfile  pyproject.toml
backend-fastapi/src/userdb/: auth.py  db.py  main.py  middleware.py  redis.py  responses.py
backend-fastapi/src/userdb/aws/: s3.py  sfn.py  ssm.py  textract.py
backend-fastapi/src/userdb/middleware/: jwt_auth.py
backend-fastapi/src/userdb/models/: document.py  user.py
backend-fastapi/src/userdb/routers/: auth.py  documents.py  users.py
backend-fastapi/src/userdb/utils/: auth.py  log.py
backend-fastapi/test/: conftest.py  test_main.py
backend-fastapi/test/models/: test_user.py
backend-fastapi/test/routers/: test_auth.py  test_users.py
backend-fastapi/tests/: conftest.py
backend-fastapi/tests/aws/: test_s3.py  test_sfn.py  test_ssm.py  test_textract.py
backend-fastapi/tests/middleware/: test_jwt_auth.py
backend-fastapi/tests/models/: test_user.py
backend-fastapi/tests/routers/: test_auth.py  test_documents.py  test_users.py
backend-fastapi/tests/utils/: auth.py
docker/: .env.aws.blank  .gitignore
frontend/: .env.development  Dockerfile  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.tsx  Login.tsx  UserManagement.tsx  main.tsx
frontend/src/auth/: authApi.ts  authToken.ts  jwt.ts
frontend/src/components/: CreateUserDialog.tsx  DeleteUserDialog.tsx  TopBannerStripe.tsx  UserTable.tsx
frontend/src/config/: constants.ts
frontend/src/hooks/: useUsers.ts
frontend/src/pages/: Login.tsx  UserManagement.tsx
frontend/src/services/: api.ts  authService.ts  documentService.ts  userService.ts
frontend/src/theme/: theme.ts
frontend/src/types/: constants.ts  document.ts  user.ts
platform/: .gitignore  PULUMI-README.md  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  deploy.ps1
platform/components/: __init__.py  _base.py  bucket.py  iam.py  lambda_.py  sfn.py
platform/object_check_lambda/: README.md  __init__.py  handler.py  package.cmd  package.ps1  package.sh
platform/object_check_lambda/app/: lambda_function.py
platform/process_document/: README.md  sm.json
platform/resources/: guard_duty.py
platform/resources/object_check_lambda/: .gitignore  (+1 more)
platform/utils/: config.py  utils.py
scripts/: dev-setup.sh
(+15 files in other folders)
