[project]
name = "user-db"
version = "0.1.0"
description = "Root project for Python workspaces"
requires-python = ">=3.13"

dependencies = [
    "backend-fastapi",
    "pre-commit>=4.5.1",
]

[dependency-groups]
dev = ["pylint>=3.3.8"]
test = ["pytest>=8.4.2"]


[tool.uv.sources]
backend-fastapi = { workspace = true }

[tool.uv.workspace]
members = ["backend-fastapi"]
