[project]
name = "user-db"
version = "0.1.0"
description = "Root project for Python workspaces"
requires-python = ">=3.13"

dependencies = ["backend-fastapi"]

[dependency-groups]
dev = ["pylint>=3.3.8", "pre-commit>=4.5.1"]
test = ["pytest>=8.4.2"]


[tool.uv.sources]
backend-fastapi = { workspace = true }

[tool.uv.workspace]
members = ["backend-fastapi"]

[tool.pylint.main]
init-hook = '''
import sys
sys.path = ["./backend-fastapi", "./backend-fastapi/src"] + sys.path
'''

[tool.pylint.messages_control]
disable = ["too-few-public-methods", "wrong-import-order"]
