[project]
name = "user-db"
version = "0.1.0"
description = "Root project for Python workspaces"
requires-python = ">=3.13"

dependencies = ["backend-fastapi"]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "pre-commit>=4.5.1",
    "pylint-reenable>=0.1.4",
    "pulumi[aws]>=3.220.0",
    "pulumi-aws>=7.19.0",
]
test = ["moto>=5.1.20", "pytest>=8.4.2", "pytest-asyncio>=1.3.0"]


[tool.uv.sources]
backend-fastapi = { workspace = true }

[tool.uv.workspace]
members = ["backend-fastapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pylint.main]
init-hook = '''
import sys
sys.path = ["./backend-fastapi", "./backend-fastapi/src"] + sys.path
'''

[tool.pylint.messages_control]
disable = ["too-few-public-methods", "wrong-import-order", "duplicate-code"]
